<resources>
    <!-- APP NAME OBVIOUSLY -->
    <string name="app_name">Mars Photos Task</string>
    <!-- TAB NAMES !-->
    <string name="tab1">CURIOUSITY</string>
    <string name="tab2">OPPORTUNITY</string>
    <string name="tab3">SPIRIT</string>
    <!-- DIALOG ERROR TEXTS-->
    <string name="dialog_error">Error</string>
    <string name="dialog_message">Cannot Access Item</string>
    <!-- DIALOG SUCCESS TEXTS !-->
    <string name="camera_name">Camera Name: %s</string>
    <string name="mission_status">Mission Status: %s</string>
    <string name="launch_date">Launch Date: %s</string>
    <string name="landing_date">Landing Date: %s</string>
    <string name="filter_button_text">FILTER</string>
    <!-- FILTER CHECKBOX TEXTS !-->
    <string name="fhaz">FHAZ</string>
    <string name="rhaz">RHAZ</string>
    <string name="mast">MAST</string>
    <string name="chemcam">CHEMCAM</string>
    <string name="mahli">MAHLI</string>
    <string name="mardi">MARDI</string>
    <string name="navcam">NAVCAM</string>
    <string name="pancam">PANCAM</string>
    <string name="minites">MINITES</string>
    <!-- CONTENT DESCRIPTIONS !-->
    <string name="listitem_contentdescription">Photograph from Mars</string>
    <string name="filterbutton_contentdescription">Filter Button</string>
    <!-- FILTER WINDOW TAG !-->
    <string name="filter_window_tag">FILTER POPUP WINDOW</string>
</resources>